# mpc-lib

./: CMakeLists.txt  README.txt
data/: ackermannData.mat  ackermannData2mat.asv  ackermannData2mat.m  ackermannInputData.txt  ackermannRefData.txt  ackermannStateData.txt  ackermannTimeData.txt  plotRefTracking.asv  plotRefTracking.m
examples/: ackermannExample.cpp  doubleIntegratorExample.cpp
include/: MpcController.hpp  MpcMathUtilities.hpp
src/: MpcController.cpp  testMpcClass.cpp
